--- a/environment.yml
+++ b/environment.yml
@@ -3,17 +3,200 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - scipy
-  - numpy
-  - notebook
-  - ipywidgets
-  - matplotlib
-  - pandas
-  - ipyleaflet
-  - ipympl
-  - pythreejs
-  - bqplot
-  - voila
-  - gdal
-  - laspy
-  - owslib 
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=0_gnu
+  - async_generator=1.10=py_0
+  - attrs=19.3.0=py_0
+  - backcall=0.1.0=py_0
+  - beakerx=1.4.1=py38_1
+  - bleach=3.1.0=py_0
+  - boost-cpp=1.70.0=h8e57a91_2
+  - bqplot=0.12.3=py_0
+  - branca=0.3.1=py_0
+  - bzip2=1.0.8=h516909a_2
+  - ca-certificates=2019.11.28=hecc5488_0
+  - cairo=1.16.0=hfb77d84_1002
+  - certifi=2019.11.28=py38_0
+  - cffi=1.13.2=py38h8022711_0
+  - cfitsio=3.470=hb60a0a2_2
+  - chardet=3.0.4=py38_1003
+  - cryptography=2.8=py38h72c5cf5_1
+  - curl=7.65.3=hf8cf82a_0
+  - cycler=0.10.0=py_2
+  - dbus=1.13.6=he372182_0
+  - decorator=4.4.1=py_0
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=py38_1000
+  - expat=2.2.9=he1b5a44_2
+  - fontconfig=2.13.1=h86ecdb6_1001
+  - freetype=2.10.0=he983fc9_1
+  - freexl=1.0.5=h14c3975_1002
+  - gdal=3.0.4=py38hbb6b9fb_0
+  - geos=3.8.0=he1b5a44_0
+  - geotiff=1.5.1=h38872f0_8
+  - gettext=0.19.8.1=hc5be6a0_1002
+  - giflib=5.2.1=h516909a_1
+  - glib=2.58.3=py38h6f030ca_1002
+  - gst-plugins-base=1.14.5=h0935bb2_1
+  - gstreamer=1.14.5=h36ae1b5_1
+  - hdf4=4.2.13=hf30be14_1003
+  - hdf5=1.10.5=nompi_h3c11f04_1104
+  - icu=64.2=he1b5a44_1
+  - idna=2.8=py38_1000
+  - importlib_metadata=1.5.0=py38_0
+  - inflect=4.0.0=py38_1
+  - ipydatawidgets=4.0.1=py_0
+  - ipykernel=5.1.4=py38h5ca1d4c_0
+  - ipyleaflet=0.12.2=py38_0
+  - ipympl=0.4.1=py_0
+  - ipyscales=0.3.0=py_0
+  - ipython=7.12.0=py38h5ca1d4c_0
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=7.5.1=py_0
+  - jaraco.itertools=5.0.0=py_0
+  - jedi=0.16.0=py38_0
+  - jinja2=2.11.1=py_0
+  - joblib=0.14.1=py_0
+  - jpeg=9c=h14c3975_1001
+  - json-c=0.13.1=h14c3975_1001
+  - jsonschema=3.2.0=py38_0
+  - jupyter_client=5.3.4=py38_1
+  - jupyter_core=4.6.1=py38_0
+  - jupyter_server=0.1.1=py38_0
+  - jupyterlab_pygments=0.1.0=py_0
+  - kealib=1.4.10=h58c409b_1005
+  - kiwisolver=1.1.0=py38hc9558a2_0
+  - krb5=1.16.4=h2fd8d38_0
+  - laspy=1.6.0=pyh5ca1d4c_0
+  - ld_impl_linux-64=2.33.1=h53a641e_8
+  - libblas=3.8.0=14_openblas
+  - libcblas=3.8.0=14_openblas
+  - libclang=9.0.1=default_hde54327_0
+  - libcurl=7.65.3=hda55be3_0
+  - libdap4=3.20.4=hd3bb157_0
+  - libedit=3.1.20170329=hf8c457e_1001
+  - libffi=3.2.1=he1b5a44_1006
+  - libgcc-ng=9.2.0=h24d8f2e_2
+  - libgdal=3.0.4=h20022a4_0
+  - libgfortran-ng=7.3.0=hdf63c60_5
+  - libgomp=9.2.0=h24d8f2e_2
+  - libiconv=1.15=h516909a_1005
+  - libkml=1.3.0=h4fcabce_1010
+  - liblapack=3.8.0=14_openblas
+  - libllvm9=9.0.1=hc9558a2_0
+  - libnetcdf=4.7.3=nompi_h9f9fd6a_101
+  - libopenblas=0.3.7=h5ec1e0e_6
+  - libpng=1.6.37=hed695b0_0
+  - libpq=12.1=hd9ab2ff_0
+  - libsodium=1.0.17=h516909a_0
+  - libspatialite=4.3.0a=ha48a99a_1034
+  - libssh2=1.8.2=h22169c7_2
+  - libstdcxx-ng=9.2.0=hdf63c60_2
+  - libtiff=4.1.0=hc3755c2_3
+  - libuuid=2.32.1=h14c3975_1000
+  - libwebp=1.0.2=h56121f0_5
+  - libxcb=1.13=h14c3975_1002
+  - libxkbcommon=0.9.1=hebb1f50_0
+  - libxml2=2.9.10=hee79883_0
+  - lz4-c=1.8.3=he1b5a44_1001
+  - markupsafe=1.1.1=py38h516909a_0
+  - matplotlib=3.1.2=py38_1
+  - matplotlib-base=3.1.2=py38h250f245_1
+  - maven=3.6.0=0
+  - mistune=0.8.4=py38h516909a_1000
+  - more-itertools=8.2.0=py_0
+  - nbconvert=5.6.1=py38_0
+  - nbformat=5.0.4=py_0
+  - ncurses=6.1=hf484d3e_1002
+  - notebook=6.0.3=py38_0
+  - nspr=4.24=he1b5a44_0
+  - nss=3.47=he751ad9_0
+  - numpy=1.17.5=py38h95a1406_0
+  - openjdk=8.0.121=zulu8.20.0.5_0
+  - openjpeg=2.3.1=h981e76c_3
+  - openssl=1.1.1d=h516909a_0
+  - owslib=0.19.1=py_0
+  - packaging=20.1=py_0
+  - pandas=1.0.0=py38hb3f55d8_0
+  - pandoc=2.9.1.1=0
+  - pandocfilters=1.4.2=py_1
+  - parso=0.6.0=py_0
+  - patsy=0.5.1=py_0
+  - pcre=8.43=he1b5a44_0
+  - pexpect=4.8.0=py38_0
+  - pickleshare=0.7.5=py38_1000
+  - pip=20.0.2=py38_1
+  - pixman=0.38.0=h516909a_1003
+  - pluggy=0.13.1=py38_0
+  - poppler=0.67.0=h14e79db_8
+  - poppler-data=0.4.9=1
+  - postgresql=12.1=hc63931a_0
+  - proj=6.3.0=hc80f0dc_0
+  - prometheus_client=0.7.1=py_0
+  - prompt_toolkit=3.0.3=py_0
+  - pthread-stubs=0.4=h14c3975_1001
+  - ptyprocess=0.6.0=py_1001
+  - py=1.8.1=py_0
+  - py4j=0.10.8.1=py_0
+  - pycparser=2.19=py38_1
+  - pygments=2.5.2=py_0
+  - pyopenssl=19.1.0=py38_0
+  - pyparsing=2.4.6=py_0
+  - pyproj=2.4.2.post1=py38h8ff28aa_1
+  - pyqt=5.12.3=py38hcca6a23_1
+  - pyrsistent=0.15.7=py38h516909a_0
+  - pysocks=1.7.1=py38_0
+  - pytest=5.3.5=py38_0
+  - python=3.8.1=h357f687_2
+  - python-dateutil=2.8.1=py_0
+  - pythreejs=2.1.1=py_0
+  - pytz=2019.3=py_0
+  - pyzmq=18.1.1=py38h1768529_0
+  - qt=5.12.5=hd8c4c69_1
+  - readline=8.0=hf8c457e_0
+  - requests=2.22.0=py38_1
+  - scikit-learn=0.22.1=py38hcdab131_1
+  - scipy=1.4.1=py38h921218d_0
+  - send2trash=1.5.0=py_0
+  - setuptools=45.1.0=py38_0
+  - six=1.14.0=py38_0
+  - sqlite=3.30.1=hcee41ef_0
+  - statsmodels=0.11.0=py38h516909a_0
+  - tbb=2018.0.5=h2d50403_0
+  - terminado=0.8.3=py38_0
+  - testpath=0.4.4=py_0
+  - tiledb=1.7.0=hcde45ca_2
+  - tk=8.6.10=hed695b0_0
+  - tornado=6.0.3=py38h516909a_0
+  - traitlets=4.3.3=py38_0
+  - traittypes=0.2.1=py_1
+  - tzcode=2019a=h516909a_1002
+  - urllib3=1.25.7=py38_0
+  - voila=0.1.20=py_0
+  - wcwidth=0.1.8=py_0
+  - webencodings=0.5.1=py_1
+  - wheel=0.34.2=py38_0
+  - widgetsnbextension=3.5.1=py38_0
+  - xarray=0.14.1=py_1
+  - xerces-c=3.2.2=h8412b87_1004
+  - xorg-kbproto=1.0.7=h14c3975_1002
+  - xorg-libice=1.0.10=h516909a_0
+  - xorg-libsm=1.2.3=h84519dc_1000
+  - xorg-libx11=1.6.9=h516909a_0
+  - xorg-libxau=1.0.9=h14c3975_0
+  - xorg-libxdmcp=1.1.3=h516909a_0
+  - xorg-libxext=1.3.4=h516909a_0
+  - xorg-libxrender=0.9.10=h516909a_1002
+  - xorg-renderproto=0.11.1=h14c3975_1002
+  - xorg-xextproto=7.3.0=h14c3975_1002
+  - xorg-xproto=7.0.31=h14c3975_1007
+  - xz=5.2.4=h14c3975_1001
+  - zeromq=4.3.2=he1b5a44_2
+  - zipp=2.1.0=py_0
+  - zlib=1.2.11=h516909a_1006
+  - zstd=1.4.4=h3b9ef0a_1
+  - pip:
+    - pyqt5-sip==4.19.18
+    - pyqtwebengine==5.12.1
+prefix: /home/cekees/miniconda3/envs/river-mechanics
+
