--- a/environment.yml
+++ b/environment.yml
@@ -14,9 +14,9 @@ dependencies:
   - bqplot=0.12.3=py_0
   - branca=0.3.1=py_0
   - bzip2=1.0.8=h516909a_2
-  - ca-certificates=2019.11.28=hecc5488_0
+  - ca-certificates=2020.4.5.1=hecc5488_0
   - cairo=1.16.0=hfb77d84_1002
-  - certifi=2019.11.28=py38_0
+  - certifi=2020.4.5.1=py38h32f6830_0
   - cffi=1.13.2=py38h8022711_0
   - cfitsio=3.470=hb60a0a2_2
   - chardet=3.0.4=py38_1003
@@ -50,6 +50,7 @@ dependencies:
   - ipyleaflet=0.12.2=py38_0
   - ipympl=0.4.1=py_0
   - ipyscales=0.3.0=py_0
+  - ipysheet=0.4.3=py_1
   - ipython=7.12.0=py38h5ca1d4c_0
   - ipython_genutils=0.2.0=py_1
   - ipywidgets=7.5.1=py_0
@@ -114,7 +115,7 @@ dependencies:
   - numpy=1.17.5=py38h95a1406_0
   - openjdk=8.0.121=zulu8.20.0.5_0
   - openjpeg=2.3.1=h981e76c_3
-  - openssl=1.1.1d=h516909a_0
+  - openssl=1.1.1f=h516909a_0
   - owslib=0.19.1=py_0
   - packaging=20.1=py_0
   - pandas=1.0.0=py38hb3f55d8_0
@@ -134,6 +135,7 @@ dependencies:
   - proj=6.3.0=hc80f0dc_0
   - prometheus_client=0.7.1=py_0
   - prompt_toolkit=3.0.3=py_0
+  - pscript=0.7.3=py_0
   - pthread-stubs=0.4=h14c3975_1001
   - ptyprocess=0.6.0=py_1001
   - py=1.8.1=py_0
@@ -149,6 +151,7 @@ dependencies:
   - pytest=5.3.5=py38_0
   - python=3.8.1=h357f687_2
   - python-dateutil=2.8.1=py_0
+  - python_abi=3.8=1_cp38
   - pythreejs=2.1.1=py_0
   - pytz=2019.3=py_0
   - pyzmq=18.1.1=py38h1768529_0
